--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,60 @@
-p{
-    color: black;
+:root{
+    font-family: 'Roboto Mono', monospace;
+    --grid-unit: 58px;
 }
 
-h1.job-title{
-    font-size: small;
+div.top{
+    position: relative;
+    width: calc(var(--grid-unit) * 12);
+    height: calc(var(--grid-unit) * 4);
+    background-color: rgba(0,0,0,0.1);
+}
+
+body{
+    background: url("../img/grid_pattern.jpg");
+    margin-top: var(--grid-unit);
+    margin-left: calc(3 * var(--grid-unit));
+}
+
+p{
+    font-weight: 300;
+    font-size: 24px;
+    line-height: 58px;
+    background-color: rgba(255,0,0,0.1);
+    margin: 0px;
+    letter-spacing: 0.004em
+}
+
+p.about-me{
+    margin-top: var(--grid-unit);
+    position: relative;
+    top: 20px;
+}
+
+h1{
+    font-weight: 700;
+    font-size: 96px;
+    line-height: 116px;
+    letter-spacing: 0px;
+    background-color: rgba(0,255,0,0.1);
+    margin: 0px;
+    position: relative;
+    bottom: -20px;
+    left: calc(0px - var(--grid-unit));
+
+}
+
+h2{
+    font-weight: 400;
+    font-size: 48px;
+    line-height: 58px;
+    background-color: rgba(0,0,255,0.1);
+    margin: 0px;
+}
+
+h2.job-title{
+    position: absolute;
+    width: calc(4 * var(--grid-unit));
+    right: 0px;
+    bottom: -10px;
 }
