--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,18 @@
     --border-radius: 5px;
 }
 
+a{
+    text-decoration: none;
+    /* background-color: aqua; */
+    /* padding: 5px; */
+    font-weight: 700;
+}
+a:visited{
+    color:white;
+}
+a:hover{
+    color:coral;
+}
 body{
     background: url("../img/grid_pattern.jpg");
     background-position: center 0;
